--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+    background: #8b6b4d; 
+}
+
 .form-container {
     background: #8b6b4d;
     padding: 20px;
@@ -31,3 +35,82 @@ input {
     cursor: pointer;
                             
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+  padding: 2rem 1rem;   
+}
+
+.title {
+  margin: 0.5rem 0;
+  font-size: 40px;
+}
+
+.description {
+  margin: 0.5rem 0;
+  max-width: 600px;    
+  color: white;
+  font-size: large;
+}
+
+
+.shop-page {
+  min-height: 100vh;
+  background-color: #8b6b4d;  
+}
+
+.shop-content {
+  display: flex;
+}
+
+.shop-sidebar {
+  width: 200px;             
+  background-color: #a07f58;
+  padding: 1.5rem 1rem;
+  box-sizing: border-box;
+}
+
+.shop-sidebar input[type="text"] {
+  width: 90%;
+  padding: 0.75rem;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 1.5rem;
+}
+
+.searchbar {
+    width: 90%;
+}
+
+.shop-products {
+  flex-grow: 1;
+  padding: 1.5rem;
+  box-sizing: border-box;
+  background-color: #7f553e; 
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1.25rem;
+}
+
+.card {
+  background: #e6e6e6;
+  border-radius: 8px;
+  padding: 1rem;
+  box-sizing: border-box;
+  color: #4a2b0f;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card h4 {
+  margin: 0 0 0.5rem;
+}
+
+.card p {
+  margin: 0.25rem 0;
+}
+
+
